--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Nothing</title>
+    <title>SuperBotz Proxy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <!-- header font -->
@@ -35,7 +35,7 @@
         }
 
         .container {
-            background-color: #3F4038;
+            background-color: #aaf0eb;
             border-color: #5B3E38
         }
 
@@ -155,19 +155,19 @@
 <body>
 <div class="container">
     <div class="main">
-        <h1>Nothing</h1>
+        <h1>SuperBotz Proxy</h1>
         <div id="error"></div>
         <form action="no-js" method="get" id="unblocker-form">
             <p>
-                网址:
+                Enter URL:
                 <input type="text" id="url" name="url" autofocus="autofocus" placeholder="www.google.com"/>
-                <input type="submit" value="浏览"/>
+                <input type="submit" value="Unblock"/>
             </p>
         </form>
         <h3>
-            <center>导航</center>
+            <center>Powered By <a href=http://cvatricks.blogspot.com>CvaTricks</a></center>
         </h3>
-        <h4>实用工具</h4>
+        <center><h4>Shortcuts</h4></center>
         <a href="./proxy/https://www.google.com/">Google</a>
         <a href="./proxy/https://www.wikipedia.org/">维基百科</a>
     </div>
@@ -181,7 +181,7 @@
     <br>
     <br>
     <p>
-    <center>通用 Web 代理, 访问的网站全部经过代理服务器, 能代理大多数网站.</center>
+    <center>All rights reserved © Copyright: 2020 | Powered By <a href=http://cvatricks.blogspot.com>CvaTricks</a></center>
     </p>
 </div>
 <script>
