--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SuperBotz Proxy</title>
+    <title>SuperBotz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <!-- header font -->
@@ -30,21 +30,21 @@
 
         /* colors */
         body {
-            background-color: #000306;
+            background-color: #fc00f8;
             color: white;
         }
 
         .container {
-            background-color: #aaf0eb;
-            border-color: #5B3E38
+            background-color: #001eff;
+            border-color: #00faf6
         }
 
         a {
-            color: #62BECB;
+            color: #0400fa;
         }
 
         a:hover {
-            color: #82DEEB
+            color: #0d1dff
         }
 
         #error {
