--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         /* colors */
         body {
             background-color: #ffffff;
-            color: white;
+            color: black;
         }
 
         .container {
@@ -40,7 +40,7 @@
         }
 
         a {
-            color: #000000;
+            color: #ffffff;
         }
 
         a:hover {
