--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         /* colors */
         body {
             background-color: #ffffff;
-            color: black;
+            color: green;
         }
 
         .container {
