--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
         }
 
         a {
-            color: #ffffff;
+            color: #000000;
         }
 
         a:hover {
@@ -56,14 +56,14 @@
 
         .main {
             background-repeat: repeat-x;
-            color: #ffffff;
+            color: #000000;
         }
 
         .footer {
             min-height: 60px;
             background-repeat: repeat-x;
             background-position: bottom left;
-            color: #ffffff;
+            color: #000000;
         }
 
         .container {
