--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
         /* colors */
         body {
             background-color: #ffffff;
-            color: green;
+            color: black;
         }
 
         .container {
@@ -155,6 +155,14 @@
 <div class="container">
     <div class="main">
         <h1>SuperBotz Proxy</h1>
+	       
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
         <div id="error"></div>
         <form action="no-js" method="get" id="unblocker-form">
             <p>
@@ -171,13 +179,6 @@
         <a href="./proxy/http://www.tamilyogi.cool/"><img border="0" alt="TamilYogi" src="/tamilyogi.png" width="100" height="40" /></a>
     </div>
     <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br>
-    <br>
 	<center>Powered By <a href=http://cvatricks.blogspot.com>CvaTricks</a></center>
     <br>
     <p>
