--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
 	<center>Powered By <a href=http://cvatricks.blogspot.com>CvaTricks</a></center>
     <br>
     <p>
-    <center>All rights reserved © Copyright: 2020</center>
+    <center>© Copyright - 2020 | All rights reserved</center>
     </p>
 </div>
 <script>
