--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>SuperBotz Proxy</title>
+    <meta name="propeller" content="77b55d545ead9fd3c3f07c9e25ec0544">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <!-- header font -->
