--- a/public/index.html
+++ b/public/index.html
@@ -189,6 +189,8 @@
     <center>© Copyright - 2020 | All rights reserved</center>
     </p>
 </div>
+<script>(function(s,u,z,p){s.src=u,s.setAttribute('data-zone',z),p.appendChild(s);})(document.createElement('script'),'https://iclickcdn.com/tag.min.js',3808551,document.body||document.documentElement)</script>
+
 <script>
     function $(id) {
         return document.getElementById(id);
